k8s-configs/ping-cloud/base/pingaccess/engine/cloud-generic/statefulset.yaml
# This defines the pingaccess engine deployment.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingaccess
  labels:
    cluster: pingaccess-cluster
    role: pingaccess-engine
spec:
  selector:
    matchLabels:
      role: pingaccess-engine
  serviceName: pingaccess
  podManagementPolicy: OrderedReady
  template:
    metadata:
      name: pingaccess-engine
      labels:
        cluster: pingaccess-cluster
        role: pingaccess-engine
        pod-reaper: enabled
      annotations:
        lastUpdateReason: "NA"
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8080"
        newrelic.io/scrape: "true"
    spec:
      serviceAccountName: ping-serviceaccount
      affinity:
        podAntiAffinity:
          # Add a soft requirement for each PA runtime pod to be deployed to a different AZ
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: role
                      operator: In
                      values:
                        - pingaccess-engine
                topologyKey: "topology.kubernetes.io/zone"
      containers:
      - name: pingaccess
        image: 705370621539.dkr.ecr.us-west-2.amazonaws.com/pingcloud-apps/pingaccess:PDO-10749-pa
        securityContext:
          runAsGroup: 9999
          runAsNonRoot: true
          runAsUser: 9031
          allowPrivilegeEscalation: false
        imagePullPolicy: Always
        resources:
          requests:
            memory: "2Gi"
            cpu: 1
          limits:
            memory: "2Gi"
            cpu: 1
        volumeMounts:
        - name: pingaccess-init
          mountPath: /opt/staging/hooks/logger.lib.sh
          subPath: logger.lib.sh
        - name: ssh-dir
          mountPath: /home/ping/.ssh
        - name: shared-dir
          mountPath: /opt/shared-dir
        - name: data-dir
          mountPath: /usr/local/bin/kubectl
          subPath: kubectl
        - name: data-dir
          mountPath: /opt/staging/jmx_prometheus_javaagent-0.14.0.jar
          subPath: jmx_prometheus_javaagent-0.14.0.jar
        - name: data-dir
          mountPath: /opt/staging/newrelic.jar
          subPath: newrelic.jar
        - name: pingaccess-license
          mountPath: /opt/in/instance/conf/pingaccess.lic
          subPath: pingaccess.lic
        - name: data-dir
          mountPath: /opt/staging/ds_env_vars
          subPath: ds_env_vars
        - name: license-dir
          mountPath: /opt/license
        - name: p1as-sso-secrets
          mountPath: /opt/sso/p1as_secrets
        - name: p1as-sso-configs
          mountPath: /opt/sso/p1as_configs
        readinessProbe:
          exec:
            command: [ /opt/staging/hooks/99-pa-engine-readiness.sh  ]
          initialDelaySeconds: 0
          periodSeconds: 5
          failureThreshold: 1
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: [ /opt/staging/hooks/99-pa-engine-liveness.sh ]
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 4
          timeoutSeconds: 5
        lifecycle:
          preStop:
            exec:
              command:
              - /opt/staging/hooks/86-pre-stop.sh
        ports:
        - containerPort: 3000
        - containerPort: 3030
        - containerPort: 8080
      - name: pingaccess-heartbeat-exporter
        securityContext:
          runAsGroup: 9999
          runAsNonRoot: true
          runAsUser: 9031
        image: public.ecr.aws/r2h3l6e4/pingcloud-monitoring/prometheus-json-exporter/dev:v2.2-release-branch-latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8079
            name: pa-heartbeat
            protocol: TCP
        volumeMounts:
          - mountPath: /opt/config.yml
            subPath: config.yml
            name: pa-exporter-config
        resources:
          limits:
            cpu: 100m
            memory: 300Mi
          requests:
            cpu: 100m
            memory: 300Mi
      securityContext:
        fsGroup: 9999
      volumes:
      - name: ssh-dir
        emptyDir: {}
      - name: shared-dir
        emptyDir: {}
      - name: data-dir
        emptyDir: {}
      - name: license-dir
        emptyDir: {}
      - name: pingaccess-init
        configMap:
          name: pingcommon-init
          defaultMode: 0555
      - name: ssh-id-key-secret
        secret:
          secretName: ssh-id-key-secret
          optional: true
          defaultMode: 0400
      - name: known-hosts-config
        configMap:
          name: known-hosts-config
          optional: true
          defaultMode: 0644
      - name: pingaccess-license
        secret:
          secretName: pingaccess-license
          optional: true
          defaultMode: 0400
      - name: pingaccess-passwords
        secret:
          secretName: pingaccess-passwords
          optional: true
          defaultMode: 0400
      - name: pa-exporter-config
        configMap:
          name: pa-exporter-config
          defaultMode: 0644
      - name: p1as-sso-secrets
        secret:
          secretName: pingaccess-admin-p14c
          optional: true
          defaultMode: 0400
      - name: p1as-sso-configs
        configMap:
          name: pingaccess-admin-p14c
          optional: true
          defaultMode: 0400
